content/_generated-doc/2.7/config/quarkus-mongodb-mongo-client-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-mongo-client-build-time-config_configuration]]link:#quarkus-mongodb-mongo-client-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.health.enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.health.enabled[quarkus.mongodb.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.metrics.enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.metrics.enabled[quarkus.mongodb.metrics.enabled]`

[.description]
--
Whether or not metrics are published in case a metrics extension is present.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.tracing.enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.tracing.enabled[quarkus.mongodb.tracing.enabled]`

[.description]
--
Whether or not tracing spans of driver commands are sent in case the smallrye-opentracing extension is present.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.force-default-clients]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.force-default-clients[quarkus.mongodb.force-default-clients]`

[.description]
--
If set to true, the default clients will always be created even if there are no injection points that use them
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.enabled[quarkus.mongodb.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.image-name]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.image-name[quarkus.mongodb.devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.port]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.port[quarkus.mongodb.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.properties-properties]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.properties-properties[quarkus.mongodb.devservices.properties]`

[.description]
--
Generic properties that are added to the connection URL.
--|`Map<String,String>` 
|

|===