content/_generated-doc/3.2/config/quarkus-mongodb-mongo-client-build-time-config.adoc

:summaryTableId: quarkus-mongodb-mongo-client-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-mongo-client-build-time-config_configuration]]link:#quarkus-mongodb-mongo-client-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-health-enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-health-enabled[quarkus.mongodb.health.enabled]`


[.description]
--
Whether a health check is published in case the smallrye-health extension is present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-metrics-enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-metrics-enabled[quarkus.mongodb.metrics.enabled]`


[.description]
--
Whether metrics are published in case a metrics extension is present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-tracing-enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-tracing-enabled[quarkus.mongodb.tracing.enabled]`


[.description]
--
Whether tracing spans of driver commands are sent in case the smallrye-opentracing extension is present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-force-default-clients]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-force-default-clients[quarkus.mongodb.force-default-clients]`


[.description]
--
If set to true, the default clients will always be created even if there are no injection points that use them

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_FORCE_DEFAULT_CLIENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_FORCE_DEFAULT_CLIENTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-enabled[quarkus.mongodb.devservices.enabled]`


[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-image-name]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-image-name[quarkus.mongodb.devservices.image-name]`


[.description]
--
The container image name to use, for container based DevServices providers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-port]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-port[quarkus.mongodb.devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-properties-properties]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-properties-properties[quarkus.mongodb.devservices.properties]`


[.description]
--
Generic properties that are added to the connection URL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DEVSERVICES_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DEVSERVICES_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-container-env-container-env]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus-mongodb-devservices-container-env-container-env[quarkus.mongodb.devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===